<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:layout_gravity="center"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:background="@drawable/background"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".activity.Login">

    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_margin="20sp"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:layout_width="wrap_content"
                android:text="@string/welcome"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_marginTop="24.0dip"
                android:fontFamily="serif-monospace"
                android:textStyle="bold"
                android:textSize="24.0sp"
                android:layout_marginBottom="20sp"
                android:textColor="#FFF"
                android:layout_height="wrap_content" />

                <EditText
                    android:id="@+id/mobile_number"
                    android:layout_width="match_parent"
                    android:layout_height="36sp"
                    android:hint="@string/prompt_mobile"
                    android:textSize="16sp"
                    android:layout_marginLeft="20sp"
                    android:lines="1"
                    android:imeOptions="actionUnspecified|normal"
                    android:layout_marginRight="20sp"
                    android:drawableLeft="@drawable/ic_phone_black"
                    android:paddingLeft="6sp"
                    android:background="@drawable/select_button"
                    android:textColorHint="@color/colorPrimary"
                    android:inputType="phone"
                    android:maxLines="1"
                    android:singleLine="true" />

                <EditText
                    android:id="@+id/login_password"
                    android:layout_width="match_parent"
                    android:layout_height="36sp"
                    android:hint="@string/prompt_password"
                    android:imeActionId="6"
                    android:textSize="16sp"
                    android:layout_marginLeft="20sp"
                    android:lines="1"
                    android:layout_marginRight="20sp"
                    android:layout_marginTop="10.0dip"
                    android:drawableLeft="@drawable/ic_lock"
                    android:paddingLeft="6sp"
                    android:background="@drawable/select_button"
                    android:textColorHint="@color/colorPrimary"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true" />

            <android.support.v7.widget.CardView
                android:layout_gravity="center_horizontal"
                android:id="@+id/sign_in_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20.0dip"
                android:layout_marginBottom="8.0dip"
                android:foreground="?selectableItemBackground"
                app:cardCornerRadius="4.0dip"
                app:cardUseCompatPadding="true">

                <TextView
                    android:textSize="20.0sp"
                    android:textColor="#FFFFFF"
                    android:gravity="center"
                    android:background="@color/colorPrimary"
                    android:paddingLeft="64.0dip"
                    android:paddingTop="8.0dip"
                    android:paddingRight="64.0dip"
                    android:fontFamily="sans-serif-condensed"
                    android:textStyle="bold"
                    android:paddingBottom="8.0dip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/action_sign_in" />

            </android.support.v7.widget.CardView>

        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_gravity="center"
        android:layout_marginTop="20sp"
        android:gravity="center"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/forgot_password"
            android:layout_width="wrap_content"
            android:text="@string/forgot_password"
            android:layout_gravity="center"
            android:gravity="center"
            android:textSize="14sp"
            android:textColor="#FFF"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="20sp"
        android:layout_marginRight="30sp"
        android:layout_marginLeft="30sp"
        android:layout_height="wrap_content">

        <View
            android:layout_width="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginLeft="10sp"
            android:layout_marginRight="10sp"
            android:background="#FFF"
            android:layout_height="0.5sp"/>

    </LinearLayout>

    <LinearLayout
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:id="@+id/signUplayout"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp">

        <TextView
            android:textSize="14sp"
            android:textColor="#ffffff"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Don't have an account? "/>

        <TextView
            android:textSize="16sp"
            android:textColor="#fff"
            android:id="@+id/txtRegister"
            android:background="@drawable/sign_button_bg"
            android:paddingLeft="16dp"
            android:paddingTop="10dp"
            android:paddingRight="16dp"
            android:paddingBottom="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:text="Sign up"
            android:fontFamily="@assets/digital.ttf"/>

    </LinearLayout>
</LinearLayout>